# Concorde-EFB

./: .ez-github-scripts.json  .flutter-plugins-dependencies  .gitignore  AGENTS.md  README.md  analysis_options.yaml  entries.json  index.html  inno_setup.iss  msfs_bridge.py  package-lock.json  package.json  pubspec.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  working.md
.dart_tool/: package_config.json  package_graph.json
assets/: index-B5FjwaUb.js  index-B5FjwaUb.js.map  index-BKx-DbWf.js  index-BKx-DbWf.js.map  index-BWfqg4Bf.js  index-BWfqg4Bf.js.map  index-Bc2suhWt.css  index-BiDVR5Dt.js  index-BiDVR5Dt.js.map  index-C1Dp3q-D.css  index-C1KU1EzB.js  index-C1KU1EzB.js.map  index-CFM9vN6L.js  index-CFM9vN6L.js.map  index-CKCq-c5f.js  index-CKCq-c5f.js.map  index-CKMdTJlq.js  index-CKMdTJlq.js.map  index-CKhyRHLk.css  index-CLsDSxou.css  index-CPTGASAS.js  index-CPTGASAS.js.map  index-CSdaCUhF.js  index-CSdaCUhF.js.map  index-CbqpGxU1.js  index-CbqpGxU1.js.map  index-CeAYN6_8.js  index-CeAYN6_8.js.map  index-DHGjzgHp.js.map  index-DHLU83Ra.js  index-DHLU83Ra.js.map  index-DNGUW6lV.js  index-DNGUW6lV.js.map  index-Do9w1F2L.js  index-Do9w1F2L.js.map  index-N8RM0XIS.js.map  index-R-Du69td.js  index-R-Du69td.js.map  index-k1sTCZtp.css
beta/: index.html
changelog/: entries.json  index.html
lib/: main.dart
linux/: CMakeLists.txt
scripts/: bump-version.js  generate_airport_db.py  generate_changelog.py
simconnect-bridge/: Cargo.toml
simconnect-bridge/src/: main.rs  simconnect_reader.rs
src/: App.js  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+212 files in other folders)
