[package]
name = "simconnect-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time", "net", "sync"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(windows)'.dependencies]
simconnect = "0.2"
